	and 'sy/syrouting.h'.
2015-11-14 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'sy/sylwrp_client.cpp' that caused GPO source
	addresses to be incorrect when the node entry included the name field.
2015-11-15 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'sy/sylwrp_client.cpp' that caused the
	'SyLwrpClient::setGpiCode()' method to fail intermittently.
2015-11-16 Fred Gleason <fredg@paravelsystems.com>
	* Added syslog calls in 'sy/sylwrp_client.cpp'.
2015-11-27 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'sy/symcastsocket.cpp' that broke reception of
	multicast datagrams.
	* Added sygpiotest(1) in 'tests/'.
2015-11-30 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'SyLwrpClient::close()' method in 'sy/sylwrp_client.cpp'
	and 'sy/sylwrp_client.h'.
2015-12-02 Fred Gleason <fredg@paravelsystems.com>
	* Modified the 'SyMcastSocket::subscribe()' and
	'SyMcastSocket::unsubscribe()' methods to use the IP_PROTO
	level when calling setsockopt() instead of IP_SOL under Linux.
2015-12-02 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'SyLwrpClient::connectionError()'
	signal in 'src/sy/sylwpr_client.cpp' and 'src/sy/sylwpr_client.h'.
2015-12-18 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'bool persistent' parameter to the
	'LwrpClient::connectToHost()' method in 'sy/sylwrp_client.cpp' and
	'sy/sylwrp_client.h'.
	* Added an 'unsigned id' parameter to the
	'LwrpClient::connectionError()' signal in 'sy/sylwrp_client.cpp' and
	'sy/sylwrp_client.h'.
2015-12-18 Fred Gleason <fredg@paravelsystems.com>
	* Modified 'SyLwrpClient' class to do an automatic disconnect after
	receiving a network error.
2015-12-18 Fred Gleason <fredg@paravelsystems.com>
	* Changed SWITCHYARD_LWRP_WATCHDOG_INTERVAL_MIN value in
	'sy/syconfig.h' to 60000.0.
	* Changed SWITCHYARD_LWRP_WATCHDOG_INTERVAL_MAX value in
	'sy/syconfig.h' to 180000.0.
2015-12-18 Fred Gleason <fredg@paravelsystems.com>
	* Removed debugging printf from 'sy/sylwprclient.cpp'.